--- a/infra/kubernetes/redis.service.yml
+++ b/infra/kubernetes/redis.service.yml
@@ -5,7 +5,7 @@ metadata:
   labels:
     app:  redis
 spec:
-  type: LoadBalancer
+  type: ClusterIP
   ports:
     - port:       6379
       targetPort: 6379
